若干优化
